--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "nipplejs": "^0.10.2",
     "rxjs": "~7.8.0",
     "three": "^0.166.1",
     "tslib": "^2.3.0",
