--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.5",
     "nipplejs": "^0.10.2",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.7.5",
     "three": "^0.166.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
