--- a/angular.json
+++ b/angular.json
@@ -44,8 +44,8 @@
               }
             ],
             "styles": [
-              "src/styles.scss",
-              "@angular/material/prebuilt-themes/azure-blue.css"
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "src/styles.scss"
             ],
             "scripts": []
           },
