add split-type library for text animation; enhance portofolio component with dynamic text effects

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nipplejs": "^0.10.2",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
+    "split-type": "^0.3.4",
     "three": "^0.166.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
